# rtdl-num-embeddings

./: .gitignore  LICENSE  README.md  requirements.txt
exp/mlp-dice/adult/: 0_tuning.toml
exp/mlp-dice/adult/0_ensemble_5/0/: report.json
exp/mlp-dice/adult/0_ensemble_5/1/: report.json
exp/mlp-dice/adult/0_ensemble_5/2/: report.json
exp/mlp-dice/adult/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/adult/0_evaluation/0/: report.json
exp/mlp-dice/adult/0_evaluation/1/: report.json
exp/mlp-dice/adult/0_evaluation/10/: report.json
exp/mlp-dice/adult/0_evaluation/11/: report.json
exp/mlp-dice/adult/0_evaluation/12/: report.json
exp/mlp-dice/adult/0_evaluation/13/: report.json
exp/mlp-dice/adult/0_evaluation/14/: report.json
exp/mlp-dice/adult/0_evaluation/2/: report.json
exp/mlp-dice/adult/0_evaluation/3/: report.json
exp/mlp-dice/adult/0_evaluation/4/: report.json
exp/mlp-dice/adult/0_evaluation/5/: report.json
exp/mlp-dice/adult/0_evaluation/6/: report.json
exp/mlp-dice/adult/0_evaluation/7/: report.json
exp/mlp-dice/adult/0_evaluation/8/: report.json
exp/mlp-dice/adult/0_evaluation/9/: report.json
exp/mlp-dice/adult/0_tuning/: report.json
exp/mlp-dice/california/: 0_tuning.toml
exp/mlp-dice/california/0_ensemble_5/0/: report.json
exp/mlp-dice/california/0_ensemble_5/1/: report.json
exp/mlp-dice/california/0_ensemble_5/2/: report.json
exp/mlp-dice/california/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/california/0_evaluation/0/: report.json
exp/mlp-dice/california/0_evaluation/1/: report.json
exp/mlp-dice/california/0_evaluation/10/: report.json
exp/mlp-dice/california/0_evaluation/11/: report.json
exp/mlp-dice/california/0_evaluation/12/: report.json
exp/mlp-dice/california/0_evaluation/13/: report.json
exp/mlp-dice/california/0_evaluation/14/: report.json
exp/mlp-dice/california/0_evaluation/2/: report.json
exp/mlp-dice/california/0_evaluation/3/: report.json
exp/mlp-dice/california/0_evaluation/4/: report.json
exp/mlp-dice/california/0_evaluation/5/: report.json
exp/mlp-dice/california/0_evaluation/6/: report.json
exp/mlp-dice/california/0_evaluation/7/: report.json
exp/mlp-dice/california/0_evaluation/8/: report.json
exp/mlp-dice/california/0_evaluation/9/: report.json
exp/mlp-dice/california/0_tuning/: report.json
exp/mlp-dice/churn/: 0_tuning.toml
exp/mlp-dice/churn/0_ensemble_5/0/: report.json
exp/mlp-dice/churn/0_ensemble_5/1/: report.json
exp/mlp-dice/churn/0_ensemble_5/2/: report.json
exp/mlp-dice/churn/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/churn/0_evaluation/0/: report.json
exp/mlp-dice/churn/0_evaluation/1/: report.json
exp/mlp-dice/churn/0_evaluation/10/: report.json
exp/mlp-dice/churn/0_evaluation/11/: report.json
exp/mlp-dice/churn/0_evaluation/12/: report.json
exp/mlp-dice/churn/0_evaluation/13/: report.json
exp/mlp-dice/churn/0_evaluation/14/: report.json
exp/mlp-dice/churn/0_evaluation/2/: report.json
exp/mlp-dice/churn/0_evaluation/3/: report.json
exp/mlp-dice/churn/0_evaluation/4/: report.json
exp/mlp-dice/churn/0_evaluation/5/: report.json
exp/mlp-dice/churn/0_evaluation/6/: report.json
exp/mlp-dice/churn/0_evaluation/7/: report.json
exp/mlp-dice/churn/0_evaluation/8/: report.json
exp/mlp-dice/churn/0_evaluation/9/: report.json
exp/mlp-dice/churn/0_tuning/: report.json
exp/mlp-dice/covtype/: 0_tuning.toml
exp/mlp-dice/covtype/0_ensemble_5/0/: report.json
exp/mlp-dice/covtype/0_ensemble_5/1/: report.json
exp/mlp-dice/covtype/0_ensemble_5/2/: report.json
exp/mlp-dice/covtype/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/covtype/0_evaluation/0/: report.json
exp/mlp-dice/covtype/0_tuning/: report.json
exp/mlp-dice/eye/: 0_tuning.toml
exp/mlp-dice/fb-comments/: 0_tuning.toml
exp/mlp-dice/fb-comments/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/fb-comments/0_tuning/: report.json
exp/mlp-dice/gesture/: 0_tuning.toml
exp/mlp-dice/gesture/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/gesture/0_tuning/: report.json
exp/mlp-dice/higgs-small/: 0_tuning.toml
exp/mlp-dice/higgs-small/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/higgs-small/0_tuning/: report.json
exp/mlp-dice/house/: 0_tuning.toml
exp/mlp-dice/house/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/house/0_tuning/: report.json
exp/mlp-dice/microsoft/: 0_tuning.toml
exp/mlp-dice/microsoft/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/microsoft/0_tuning/: report.json
exp/mlp-dice/otto/: 0_tuning.toml
exp/mlp-dice/otto/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/otto/0_tuning/: report.json
exp/mlp-dice/santander/: 0_tuning.toml
exp/mlp-dice/santander/0_evaluation/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
exp/mlp-dice/santander/0_tuning/: report.json
package/: LICENSE  Makefile  README.md  _typos.toml  environment-package.yaml  example.ipynb  pyproject.toml  rtdl_num_embeddings.py  test_code_blocks.py
(+140 files in other folders)
