[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "Yury Gorishniy" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch>=1.12,<3"]
dynamic = ["version", "description"]
keywords = [
    "artificial intelligence",
    "deep learning",
    "library",
    "python",
    "pytorch",
    "research",
    "torch",
    "tabular",
    "tabular data",
]
license = { file = "LICENSE" }
name = "rtdl_num_embeddings"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "delu>=0.0.26",
    "flit>=3.12.0",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.9.4",
    "mypy>=1.15.0",
    "notebook>=7.3.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pdoc>=15.0.1",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.5",
    "rtdl_revisiting_models>=0.0.2",
    "ruff>=0.11.4",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "typos>=1.31.1",
    "xdoctest>=1.2.0",
]

[project.urls]
Code = "https://github.com/yandex-research/rtdl-num-embeddings/tree/main/package/README.md"
Documentation = "https://github.com/yandex-research/rtdl-num-embeddings/tree/main/package/README.md"

[tool.flit.module]
name = "rtdl_num_embeddings"

[tool.flit.sdist]
exclude = ["pixi.lock"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^local/*"]

[tool.pyright]
exclude = [
    # Default rules
    '**/node_modules',
    '**/__pycache__',
    '**/.*',
    # Custom rules
    "cache",
    "data",
    "exp",
    "dev/exp",
    "dev/*/exp",
    "local",
]
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["RUF", "UP", "E501", "E731"]

[tool.ruff.format]
quote-style = "single"

[tool.typos.default.extend-words]
arange = "arange"

[tool.uv]
constraint-dependencies = ["numpy==1.26.4", "torch==1.12"]
